do not remake filled paths; pending larger refactor